--- a/Integration.Orchestrator.Backend.Domain/Resources/AppMessages.resx
+++ b/Integration.Orchestrator.Backend.Domain/Resources/AppMessages.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Api_SynchronizationResponse" xml:space="preserve">
+    <value>Synchronization data get successfully</value>
+  </data>
+  <data name="Api_SynchronizationStatesResponse" xml:space="preserve">
+    <value>Synchronization states data get successfully</value>
+  </data>
   <data name="Application_SynchronizationNotFound" xml:space="preserve">
     <value>Synchronization not found</value>
   </data>
@@ -128,6 +134,9 @@
   </data>
   <data name="Application_SynchronizationResponseUpdated" xml:space="preserve">
     <value>Synchronization Updated Succesfully</value>
+  </data>
+  <data name="Application_SynchronizationStatesNotFound" xml:space="preserve">
+    <value>Synchronization States not found</value>
   </data>
   <data name="Application_SynchronizationStatesResponseCreated" xml:space="preserve">
     <value>Synchronization States Created Succesfully</value>
