--- a/Integration.Orchestrator.Backend.Domain/Resources/AppMessages.resx
+++ b/Integration.Orchestrator.Backend.Domain/Resources/AppMessages.resx
@@ -123,6 +123,9 @@
   <data name="Api_IntegrationResponse" xml:space="preserve">
     <value>Integration data get successfully</value>
   </data>
+  <data name="Api_ProcessResponse" xml:space="preserve">
+    <value>Process data get successfully</value>
+  </data>
   <data name="Api_SynchronizationResponse" xml:space="preserve">
     <value>Synchronization data get successfully</value>
   </data>
@@ -147,6 +150,12 @@
   <data name="Application_IntegrationResponseUpdated" xml:space="preserve">
     <value>Integration Updated Succesfully</value>
   </data>
+  <data name="Application_ProcessNotFound" xml:space="preserve">
+    <value>Process not found</value>
+  </data>
+  <data name="Application_ProcessResponseCreated" xml:space="preserve">
+    <value>Process Created Succesfully</value>
+  </data>
   <data name="Application_SynchronizationNotFound" xml:space="preserve">
     <value>Synchronization not found</value>
   </data>
@@ -170,6 +179,9 @@
   </data>
   <data name="Domain_IntegrationMinTwoRequired" xml:space="preserve">
     <value>The process must have at least two records</value>
+  </data>
+  <data name="Domain_ProcessExists" xml:space="preserve">
+    <value>The code exists</value>
   </data>
   <data name="Exception.BadRequestException" xml:space="preserve">
     <value>Api layer error</value>
