--- a/Integration.Orchestrator.Backend.Domain/Resources/AppMessages.resx
+++ b/Integration.Orchestrator.Backend.Domain/Resources/AppMessages.resx
@@ -306,6 +306,9 @@
   <data name="Domain_StatusExists" xml:space="preserve">
     <value>The status exists</value>
   </data>
+  <data name="Domain_SynchronizationStatesExists" xml:space="preserve">
+    <value>The synchronization states exists</value>
+  </data>
   <data name="Domain_ValueExists" xml:space="preserve">
     <value>The value exists</value>
   </data>
