Se ajusta Endpoint de Catalog para creación, atualización y se agrega el de obtener por padre. Adicional se ajustan respuestas de peticiones.

--- a/Integration.Orchestrator.Backend.Domain/Resources/AppMessages.resx
+++ b/Integration.Orchestrator.Backend.Domain/Resources/AppMessages.resx
@@ -417,6 +417,9 @@
   <data name="Domain_ResponseCode_UpdatedSuccessfully" xml:space="preserve">
     <value>Actualizado Correctamente</value>
   </data>
+  <data name="Domain_Response_CodeInUse" xml:space="preserve">
+    <value>Codigo en uso</value>
+  </data>
   <data name="Domain_ServerExists" xml:space="preserve">
     <value>The server exists</value>
   </data>
