Se agrega atributo name a connection

--- a/Integration.Orchestrator.Backend.Domain/Resources/AppMessages.resx
+++ b/Integration.Orchestrator.Backend.Domain/Resources/AppMessages.resx
@@ -603,4 +603,7 @@
   <data name="Domain_PropertyEntityExists" xml:space="preserve">
     <value>Property name for this entity already exists</value>
   </data>
+  <data name="Application_Validator_MaxLength" xml:space="preserve">
+    <value>No puede exceder {0} caracteres</value>
+  </data>
 </root>
